# Computer-Vision-Course

./: README.md
ejercicio1/: Makefile  main.cpp
ejercicio2/: Makefile  ejercicio2  main.cpp
ejercicio3/: Makefile  ejercicio3  main.cpp
ejercicio4/: Makefile  ejercicio4  main.cpp
ejercicio5/: Makefile  ejercicio5  main.cpp
ejercicio6/: CMakeLists.txt  view3D.cpp
practica1/: ejercicio1  main.cpp
